--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+
+}
+body{
+    max-width: 55%;
+    margin: auto;
+}
+h1{
+    text-align: center;
+}
+li{
+    list-style: none;
+    font-size: 20px;
+    margin: auto;
+    margin-bottom: 15px;
+    width: 95%;
+    display: block;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+
+}
+ul{
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
